--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,14 @@ commands:
           name: Setup test environment
           command: |
             sudo apt-get install lsb-release
+  setup_macos:
+    description: "Setup macos test environment"
+    steps:
+      - run:
+          name: Setup test environment
+          command: |
+            brew update
+            brew install jq
   run_tests:
     description: "Tests"
     steps:
@@ -44,6 +52,7 @@ jobs:
     executor: macos_1013
     steps:
       - checkout
+      - setup_macos
       - run_tests
 
 workflows:
