--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,13 @@ commands:
           name: Setup test environment
           command: |
             sudo apt-get install lsb-release
+  setup_macos:
+    description: "Setup Ubuntu test environment"
+    steps:
+      - run:
+          name: Setup test environment
+          command: |
+            sudo launchctl limit maxfiles 24576
   run_tests:
     description: "Tests"
     steps:
@@ -28,16 +35,20 @@ commands:
             make tests
 
 jobs:
-  test:
+  test_macos:
     parameters:
       os:
         type: executor
     executor: << parameters.os >>
     steps:
       - checkout
+      - setup_macos
       - run_tests
-  test_ubuntu_1804:
-    executor: ubuntu_1804
+  test_ubuntu:
+    parameters:
+      os:
+        type: executor
+    executor: << parameters.os >>
     steps:
       - checkout
       - setup_ubuntu
@@ -46,8 +57,11 @@ jobs:
 workflows:
   all-tests:
     jobs:
-      - test_ubuntu_1804
-      - test:
+      - test_ubuntu:
+          matrix:
+            parameters:
+              os: [ubuntu_1804]
+      - test_macos:
           matrix:
             parameters:
               os: [macos_1015, macos_1106]
