--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,10 +6,16 @@ executors:
       - image: cimg/base:current-18.04
   macos_1015:
     macos:
-      xcode: "12.4.0"
+      xcode: "12.5.1"
   macos_1106:
     macos:
-      xcode: "13.1.0"
+      xcode: "13.4.1"
+  macos_1206:
+    macos:
+      xcode: "14.2.0"
+  macos_1302:
+    macos:
+      xcode: "14.3.1"
 
 commands:
   setup_ubuntu:
@@ -64,4 +70,4 @@ workflows:
       - test_macos:
           matrix:
             parameters:
-              os: [macos_1015, macos_1106]
+              os: [macos_1015, macos_1106, macos_1206, macos_1302]
