--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,15 @@ executors:
   macos_1206:
     macos:
       xcode: "14.2.0"
+    resource_class: macos.x86.medium.gen2
+    environment:
+      HOMEBREW_NO_AUTO_UPDATE: 1
   macos_1302:
     macos:
       xcode: "14.3.1"
+    resource_class: macos.x86.medium.gen2
+    environment:
+      HOMEBREW_NO_AUTO_UPDATE: 1
 
 commands:
   setup_ubuntu:
